kubernetes/apps/observability/kube-prometheus-stack/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/secret-template: |
      {"annotations": {"reflector.v1.k8s.emberstack.com/reflection-allowed": "true", "reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces": "longhorn-system,network,default"}}
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Prometheus'
spec:
  ingressClassName: external
  tls:
    - hosts:
        - prometheus.samboxlab.top
      secretName: prometheus-tls
  rules:
    - host: prometheus.samboxlab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/secret-template: |
      {"annotations": {"reflector.v1.k8s.emberstack.com/reflection-allowed": "true", "reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces": "longhorn-system,network,default"}}
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Grafana'
spec:
  ingressClassName: external
  tls:
    - hosts:
        - grafana.samboxlab.top
      secretName: grafana-tls
  rules:
    - host: grafana.samboxlab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/secret-template: |
      {"annotations": {"reflector.v1.k8s.emberstack.com/reflection-allowed": "true", "reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces": "longhorn-system,network,default"}}
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Alertmanager'
spec:
  ingressClassName: external
  tls:
    - hosts:
        - alertmanager.samboxlab.top
      secretName: alertmanager-tls
  rules:
    - host: alertmanager.samboxlab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
